objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Competitor_Required__c</fullName>
        <formula>IF( 
AND( OR( RecordType.DeveloperName = &apos;Project_Opportunity&apos;, RecordType.DeveloperName =&apos;CE_Opportunity&apos;), !ISPICKVAL(CE_Phase__c, &apos;Identification&apos;),ISPICKVAL( Competitor__c,&quot;&quot; ), 
OR( Text(CE_Division__c) = &apos;Drives&apos;,Text(CE_Division__c) = &apos;Cooling&apos;))
 , ( IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;warning&quot;, 12, 12) + &quot; Warning - Please add a Competitor&quot;) , 
 IF(
Text(CE_Division__c) = &apos;Heating&apos;
, ( IMAGE(&quot;/img/icon/hexagon16.png&quot; , &quot;not applicable&quot;) + &quot; Not Mandatory for your Segment&quot; ),(IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Requirement met&quot;) +&quot; Requirement met&quot; ) ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitor Required</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <description>CE Competitors for header level</description>
        <inlineHelpText>Choose the main competitor you are competing against</inlineHelpText>
        <label>Main Competitor</label>
        <picklist>
            <controllingField>CE_Division__c</controllingField>
            <picklistValues>
                <fullName>(APA) Haesung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(APA) KAORI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(APA) Meiyo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Castle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Dhiren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Dry-all</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Flowcon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Freze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) L&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Manik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Meidensha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Schaffner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Subzero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Super</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>(IN) Toshiba Mitsubishsi Electric Industrial Systems Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AALBERTS (COMAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC&amp;R-Henry Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACCOTEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Tech (Lenze)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adlee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alfa Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allen Bradley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Innotec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alpha Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alre</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>CE used for Project site adress</description>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>AD: Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE: Unit. Arab Emir.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AF: Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AG: Antigua/Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AI: Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL: Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM: Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AN: Dutch Antilles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AO: Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQ: Antarica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR: Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS: Samoa American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT: Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU: Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AW: Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ: Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA: Bosnia-Herz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB: Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BD: Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE: Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF: Burkina-Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BG: Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BH: Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI: Burundi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BJ: Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL: BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM: Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN: Brunei-Daruessa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BO: Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR: Brazil</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerNeeds__c</fullName>
        <label>CustomerNeeds</label>
        <summaryForeignKey>Customer_Needs_Benefits_Identification__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Alignment_Value__c</fullName>
        <formula>IF (ISBLANK(TEXT( Customer_Alignment__c )), 0, VALUE(LEFT( TEXT(Customer_Alignment__c) , 1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Alignment Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Alignment__c</fullName>
        <description>Have we delivered a presentation that communicates our points of differentiation and illustrates the value Danfoss provides?</description>
        <inlineHelpText>To what extent is the customer inviting you to influence and take part in the planning and execution of tasks in the customer buying process?</inlineHelpText>
        <label>Customer Alignment</label>
        <picklist>
            <picklistValues>
                <fullName>0 - No interactions with decision makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Decision makers confirm project phase and time plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Customer co-creates timeline &amp; tasks with us towards solution purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Customer agree on joint next steps to move forward in buying process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Customer commit to move forward with Danfoss (to operationalize)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Presentation_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box after the Customer Presentation has been attached in the Notes and Attachments section in this opportunity.</inlineHelpText>
        <label>Customer Presentation Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Danfoss_Customer_Group__c</fullName>
        <description>Show Danfoss Customer Group from the linked account.</description>
        <formula>TEXT(Account.Danfoss_Customer_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Danfoss Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Opportunity__c</fullName>
        <formula>10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_last_modified__c</fullName>
        <formula>MIN((TODAY()- LastActivityDate), (TODAY()-  DATEVALUE(LastModifiedDate) )  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last modified</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factors_Customer_Used_to_Make_Decisions__c</fullName>
        <label>Factors Customer Used to Make Decisions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gaps_in_Danfoss_Product_Offering__c</fullName>
        <label>Gaps in Danfoss Product Offering</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Progress_Amount__c</fullName>
        <formula>IF( ISPICKVAL( CE_Status__c , &quot;In Progress&quot;) , Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Progress Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <formula>IF( 
OR(
AND (Text(CE_Sales_model__c)=&quot;OEM&quot;,  
  OR((TODAY()-LastActivityDate)&gt;90,  
  (TODAY()-DATEVALUE(LastModifiedDate))&gt;90)),
OR((TODAY()-LastActivityDate)&gt;30,  (TODAY()-DATEVALUE(LastModifiedDate))&gt;30)),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Inactive</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InfluencerGridLastModified__c</fullName>
        <label>InfluencerGridLastModified</label>
        <summarizedField>Influencer_Grid__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>Influencer_Grid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>InfluencerGrid__c</fullName>
        <label>InfluencerGrid</label>
        <summaryForeignKey>Influencer_Grid__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Integrated_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box to be checked if Integrated Solution is used.</description>
        <inlineHelpText>Check box if this opportunity is using an Integrated Solution developed by PS</inlineHelpText>
        <label>Integrated Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Opportunity_ID__c</fullName>
        <description>C&amp;E field
Core CRM</description>
        <label>Legacy Opportunity ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineItemCount__c</fullName>
        <label>LineItemCount</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link_to_Documentation__c</fullName>
        <inlineHelpText>Internal repository</inlineHelpText>
        <label>Link to Documentation</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lost_Amount__c</fullName>
        <description>Returns the amount if the opportunity is lost
Hidden field to be used in reporting. Not visible to users from opportunities details page</description>
        <formula>IF(  ISPICKVAL( CE_Status__c , &quot;Lost&quot;) , Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lost Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Low_Quality_Opportunity__c</fullName>
        <formula>OR(Overdue__c=1, Inactive__c=1,  Q_Extra_Large__c=1 , Q_Over_Aged__c=1 , Q_Size_Change__c=1, Q_Time_Slippage__c=1,  Q_Stalled_in_Stage__c=1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Low Quality Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Machine_Model_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Pick the customer&apos;s machine model.  Example: 820C, 810C, etc.</inlineHelpText>
        <label>Machine Model Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Machine_Model__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Machine_Model__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Machine_Model__c</fullName>
        <description>This field shows the customer machine model number.</description>
        <inlineHelpText>Enter the customer&apos;s machine model.  Example: 820C, 810C, etc.</inlineHelpText>
        <label>Machine Model Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Application__c</fullName>
        <description>C&amp;E Application related to Account Sub Segment - Only relevant for RC and CC</description>
        <label>Main Application</label>
        <picklist>
            <controllingField>Chosen_Sub_Segment__c</controllingField>
            <picklistValues>
                <fullName>Agricultural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air Dryers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Air to Water Heat Pumps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoclaves/ Sterilizers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Bar Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beer &amp; Wine Cellar Coolers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beverage Dispensers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blast Freezers &amp; Chillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boiler Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brewery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus &amp; Train Air Conditioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Washing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catering Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chillers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Control Cooling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Rooms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Ice Making Machines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Refrigerators &amp; Freezers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compressors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condensing Units</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cooling Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dairy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dishwashing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District Heating</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Sub_Account__c</fullName>
        <formula>Sub_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name of Sub Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Win_Amount__c</fullName>
        <description>Hidden field used to calculate NET WINS for PS Dashboards.</description>
        <formula>IF( ISPICKVAL(StageName, &quot;Closed-Won&quot;) || ISPICKVAL(StageName, &quot;Closed Won&quot;), Amount, Amount * -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Win Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Accepted_Quotes__c</fullName>
        <label>No of Accepted Quotes</label>
        <summaryFilterItems>
            <field>Quote.Status</field>
            <operation>equals</operation>
            <value>Accepted</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote.RecordTypeId</field>
            <operation>equals</operation>
            <value>CE Quote</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>No_of_Quotes__c</fullName>
        <label>No of Quotes</label>
        <summaryFilterItems>
            <field>Quote.RecordTypeId</field>
            <operation>equals</operation>
            <value>CE Quote</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OLInumbers__c</fullName>
        <label>OLInumbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Amount__c</fullName>
        <formula>IF( ISPICKVAL( CE_Status__c , &quot;Open&quot;) , Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opp_Age__c</fullName>
        <description>To calculate the age of the opportunity - Hidden field in opportunity
https://success.salesforce.com/answers?id=90630000000gmm1AAA</description>
        <formula>IF(IsClosed,( 
CloseDate - DATEVALUE(CreatedDate)), 
NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_overdue_days__c</fullName>
        <description>Calculate the number of days the opportunity is overdue. Based on open and In Progress opportunities</description>
        <formula>IF (CloseDate &lt;  Today() ,(IF ( ISPICKVAL (CE_Status__c,  &quot;Open&quot; ) , Today()  -  CloseDate,0) + IF ( ISPICKVAL (CE_Status__c,  &quot;In Progress&quot; ) , Today()  -  CloseDate,0)), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp overdue days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Attribute__c</fullName>
        <description>C&amp;E field to replace Marketing Attributes from SAP CRM. Purpose is to enable the sales organisation to track different initiatives on Opportunity level.
Affects CSC (Cases) and Core CRM (Lead and Opportunity Management)</description>
        <inlineHelpText>This field is to enable tracking of divisional specific initiatives on Opportunity level.</inlineHelpText>
        <label>Opportunity Attribute</label>
        <picklist>
            <picklistValues>
                <fullName>APR Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold Chain India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Selling Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RC Product Launch Plan China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Selling Opportunity</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_case_sensitive__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID (case sensitive)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SAP_ID__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity_SAP_ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have the first production order</inlineHelpText>
        <label>Order Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <description>CE to be used to transfer the Opportunity field Origin</description>
        <label>Origin</label>
        <picklist>
            <picklistValues>
                <fullName>External data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade fair</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Originating_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF( 
AND(
NOT(
ISPICKVAL(StageName,&quot;Identified Opportunity (CE)&quot;) || ISPICKVAL(StageName,&quot;Identification (CE)&quot;) ),
CloseDate &lt; TODAY()), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q - Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PE_Global_Customer_Company__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_PE_CUSTOMER_GRP_3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DDS Global Customer Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Global_Customer__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_PE_CUSTOMER_GRP_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DDS Global Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Global_Sub_Customer__c</fullName>
        <description>CE Field to display Customer group from sub account on the Opportunity.</description>
        <formula>Sub_Account__r.MDM_PE_CUSTOMER_GRP_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is talking information from the selected sub account</inlineHelpText>
        <label>DDS Global Sub Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_SAP_Account_ID__c</fullName>
        <formula>Account.Parent.SAP_Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent SAP Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Comments__c</fullName>
        <description>For Danfoss Partners to add comments regarding their opportunities.</description>
        <inlineHelpText>For Danfoss Partners to add comments regarding their opportunities.</inlineHelpText>
        <label>Partner Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <description>CE used for Project site adress</description>
        <label>Postal code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <description>CE indicator to show how the developement of an Opportunity and to highligt where special attention is needed.</description>
        <inlineHelpText>Priority is an indicator to show how the development of an Opportunity and to highlight where special attention is needed.</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Green - On track</fullName>
                <color>#33CC00</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow - Potential risk</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Red - At risk</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability_image__c</fullName>
        <formula>IF (Probability&lt;=0.20,
IMAGE(&quot;/resource/Percentages/20percent.jpg&quot;, &quot;&lt; 20 percent&quot;),
IF (Probability&lt;=0.40,
IMAGE(&quot;/resource/Percentages/40percent.jpg&quot;, &quot;&lt; 40 percent&quot;),
IF (Probability&lt;=0.60,
IMAGE(&quot;/resource/Percentages/60percent.jpg&quot;, &quot;&lt; 60 percent&quot;),
IF (Probability&lt;=0.80,
IMAGE(&quot;/resource/Percentages/80percent.jpg&quot;, &quot;&lt; 80 percent&quot;),
IMAGE(&quot;/resource/Percentages/100percent.jpg&quot;, &quot;100 percent&quot;)
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Probability</label>
        <type>Text</type>
    </fields>
</CustomObject>